# KURSOVAYA_RABOTA_6

./: catalogHW6  data.json  pyproject.toml  requirements.txt  подсказки  черновик
article/: admin.py  models.py  urls.py  views.py
article/migrations/: 0001_initial.py  0002_alter_article_create_data.py  0003_alter_article_preview.py  0004_alter_article_preview.py  0005_alter_article_text.py
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_product_options_and_more.py  0002_initial.py  0003_category_created_at.py  0004_remove_category_created_at_and_more.py  0005_rename_product_data_of_create_product_product_created_at_and_more.py  0006_contacts.py  0007_article.py  0008_delete_article.py  0009_alter_contacts_email.py  0010_version.py  0011_rename_indicates_the_current_version_version_is_current_version.py  0012_alter_version_is_current_version.py  0013_product_owner_product.py  0014_alter_product_options_product_is_published.py  0015_alter_product_is_published.py  0016_alter_product_options.py  0017_alter_product_options_alter_version_options.py  0018_alter_product_options.py  0019_alter_product_options_alter_version_options.py  0020_alter_product_options.py  0021_alter_product_options.py  0022_alter_product_options.py  0023_alter_product_options.py  0024_alter_product_options.py  0025_alter_product_options.py
config/: settings.py  urls.py
jobs/: jobs.py  updater.py
mailing/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
users/: forms.py  models.py  urls.py  views.py
(+42 files in other folders)
